# muse

./: README.md  pyproject.toml
muse/evaluation/: get_pretrained_models.sh
muse/evaluation/atari/hyperhot/: eval_pipeline.py  hyperhot_processor.py  ingredients.py  train_rl.py  train_vae.py
muse/evaluation/atari/hyperhot/rl/: eval.py  frame_buffer.py  model.py  trainer.py  utils.py
muse/evaluation/atari/hyperhot/vae/: model.py  model_components.py  trainer.py  utils.py
muse/evaluation/atari/pendulum/: eval_pipeline.py  ingredients.py  pendulum_processor.py  train_rl.py  train_vae.py
muse/evaluation/atari/pendulum/rl/: eval.py  joint_frame_buffer.py  model.py  random_process.py  trainer.py  utils.py
muse/evaluation/atari/pendulum/vae/: model.py  model_components.py  trainer.py  utils.py
muse/evaluation/standard/celeb/: evaluate_likelihoods.py  generate.py  ingredients.py  train.py
muse/evaluation/standard/celeb/model/: evaluation_utils.py  model.py  model_components.py  trainer.py  training_utils.py
muse/evaluation/standard/mnist/: evaluate_likelihoods.py  generate.py  ingredients.py  train.py
muse/evaluation/standard/mnist/model/: cm_eval_utils.py  evaluation_utils.py  (+4 more)
muse/evaluation/standard/mnist_svhn/: evaluate_likelihoods.py  ingredients.py  train.py
muse/scenarios/: get_datasets.sh
muse/scenarios/multimodal_atari/: hyperhot_dataset.py  pendulum_sound.py  pendulum_sound_dataset.py  utils.py
muse/scenarios/standard_dataset/: double_dataset.py  generate_double_dataset.py  standard_class_dataset.py  standard_dataset.py
muse/utils/: utils.py
(+5 files in other folders)
