[tool.poetry]
name = "muse"
version = "1.0.0"
description = "Pytorch implementation of the MUSE model."
authors = ["Miguel Vasco"]

[tool.poetry.dependencies]
pip = "20.2.2"
llvmlite = "0.31.0"
matplotlib = "3.2.1"
atari-py = "^0.2.3"
gym = "^0.15.0"
numpy = "1.18.3"
python = "3.6.4"
scipy = "1.4.1"
torch = "1.5.0"
torchvision = "0.6.0"
torchaudio = "0.5.0"
dnspython = "1.16.0"
pyglet = "1.3.2"
librosa = "0.7.2"
numba = "^0.48"
sacred = "0.7.5"
pymongo = "^3.0.0"
tqdm = "4.45.0"
ipdb = "0.12.3"
opencv-python = "4.3.0.38"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"